Upgrade to RxJava 3.0.0-RC8 snapshot