@@ -230,7 +230,7 @@ public class MaybeTest extends RxJavaTest {
         Maybe.wrap(new MaybeSource<Integer>() {
             @Override
             public void subscribe(MaybeObserver<? super Integer> observer) {
-                observer.onSubscribe(Disposables.empty());
+                observer.onSubscribe(Disposable.empty());
                 observer.onSuccess(1);
             }
         })
@@ -356,7 +356,7 @@ public class MaybeTest extends RxJavaTest {
         Maybe.unsafeCreate(new MaybeSource<Integer>() {
             @Override
             public void subscribe(MaybeObserver<? super Integer> observer) {
-                observer.onSubscribe(Disposables.empty());
+                observer.onSubscribe(Disposable.empty());
                 observer.onSuccess(1);
             }
         })
@@ -896,7 +896,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void observeOnDispose() throws Exception {
-        final TestSubscriber<Integer> ts = new TestSubscriber<Integer>();
+        final TestSubscriber<Integer> ts = new TestSubscriber<>();
 
         final CountDownLatch cdl = new CountDownLatch(1);
 
@@ -1382,13 +1382,11 @@ public class MaybeTest extends RxJavaTest {
         ts.assertResult(1, 2, 3);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatArrayZero() {
         assertSame(Flowable.empty(), Maybe.concatArray());
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatArrayOne() {
         Maybe.concatArray(Maybe.just(1)).test().assertResult(1);
@@ -1401,7 +1399,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult(1, 2, 3, 4);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatIterable() {
         Maybe.concat(Arrays.asList(Maybe.just(1), Maybe.just(2)))
@@ -1409,7 +1406,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult(1, 2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatIterableEmpty() {
         Maybe.concat(Arrays.asList(Maybe.empty(), Maybe.empty()))
@@ -1417,7 +1413,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult();
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatIterableBackpressured() {
         TestSubscriber<Integer> ts = Maybe.concat(Arrays.asList(Maybe.just(1), Maybe.just(2)))
@@ -1434,7 +1429,6 @@ public class MaybeTest extends RxJavaTest {
         ts.assertResult(1, 2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatIterableBackpressuredNonEager() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1503,7 +1497,7 @@ public class MaybeTest extends RxJavaTest {
     public void basic() {
         List<Throwable> errors = TestHelper.trackPluginErrors();
         try {
-            final Disposable d = Disposables.empty();
+            final Disposable d = Disposable.empty();
 
             Maybe.<Integer>create(new MaybeOnSubscribe<Integer>() {
                 @Override
@@ -1533,7 +1527,7 @@ public class MaybeTest extends RxJavaTest {
     public void basicWithError() {
         List<Throwable> errors = TestHelper.trackPluginErrors();
         try {
-            final Disposable d = Disposables.empty();
+            final Disposable d = Disposable.empty();
 
             Maybe.<Integer>create(new MaybeOnSubscribe<Integer>() {
                 @Override
@@ -1561,7 +1555,7 @@ public class MaybeTest extends RxJavaTest {
     public void basicWithComplete() {
         List<Throwable> errors = TestHelper.trackPluginErrors();
         try {
-            final Disposable d = Disposables.empty();
+            final Disposable d = Disposable.empty();
 
             Maybe.<Integer>create(new MaybeOnSubscribe<Integer>() {
                 @Override
@@ -1598,7 +1592,6 @@ public class MaybeTest extends RxJavaTest {
         TestHelper.checkEnum(MaybeToPublisher.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArrayOneIsNull() {
         Maybe.ambArray(null, Maybe.just(1))
@@ -1606,13 +1599,11 @@ public class MaybeTest extends RxJavaTest {
                 .assertError(NullPointerException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArrayEmpty() {
         assertSame(Maybe.empty(), Maybe.ambArray());
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArrayOne() {
         assertSame(Maybe.never(), Maybe.ambArray(Maybe.never()));
@@ -1624,21 +1615,18 @@ public class MaybeTest extends RxJavaTest {
         Maybe.just(1).ambWith(error).test().assertValue(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterableOrder() {
         Maybe<Integer> error = Maybe.error(new RuntimeException());
         Maybe.amb(Arrays.asList(Maybe.just(1), error)).test().assertValue(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArrayOrder() {
         Maybe<Integer> error = Maybe.error(new RuntimeException());
         Maybe.ambArray(Maybe.just(1), error).test().assertValue(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArray1SignalsSuccess() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1661,7 +1649,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArray2SignalsSuccess() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1684,7 +1671,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult(2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArray1SignalsError() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1706,7 +1692,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertFailure(TestException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArray2SignalsError() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1728,7 +1713,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertFailure(TestException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArray1SignalsComplete() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1750,7 +1734,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult();
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambArray2SignalsComplete() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1772,7 +1755,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult();
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable1SignalsSuccess() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1795,7 +1777,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable2SignalsSuccess() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1818,7 +1799,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult(2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable2SignalsSuccessWithOverlap() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1842,7 +1822,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult(2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable1SignalsError() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1864,7 +1843,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertFailure(TestException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable2SignalsError() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1886,7 +1864,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertFailure(TestException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable2SignalsErrorWithOverlap() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1909,7 +1886,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertFailureAndMessage(TestException.class, "2");
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable1SignalsComplete() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1931,7 +1907,6 @@ public class MaybeTest extends RxJavaTest {
         to.assertResult();
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterable2SignalsComplete() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -1968,7 +1943,6 @@ public class MaybeTest extends RxJavaTest {
         }).test().assertError(NullPointerException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void ambIterableOneIsNull() {
         Maybe.amb(Arrays.asList(null, Maybe.just(1)))
@@ -1986,7 +1960,6 @@ public class MaybeTest extends RxJavaTest {
         Maybe.amb(Collections.singleton(Maybe.just(1))).test().assertResult(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArray() {
         Maybe.mergeArray(Maybe.just(1), Maybe.just(2), Maybe.just(3))
@@ -2023,7 +1996,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult(1, 2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayBackpressured() {
         TestSubscriber<Integer> ts = Maybe.mergeArray(Maybe.just(1), Maybe.just(2), Maybe.just(3))
@@ -2043,7 +2015,6 @@ public class MaybeTest extends RxJavaTest {
         ts.assertResult(1, 2, 3);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayBackpressuredMixed1() {
         TestSubscriber<Integer> ts = Maybe.mergeArray(Maybe.just(1), Maybe.<Integer>empty(), Maybe.just(3))
@@ -2060,7 +2031,6 @@ public class MaybeTest extends RxJavaTest {
         ts.assertResult(1, 3);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayBackpressuredMixed2() {
         TestSubscriber<Integer> ts = Maybe.mergeArray(Maybe.just(1), Maybe.just(2), Maybe.<Integer>empty())
@@ -2077,7 +2047,6 @@ public class MaybeTest extends RxJavaTest {
         ts.assertResult(1, 2);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayBackpressuredMixed3() {
         TestSubscriber<Integer> ts = Maybe.mergeArray(Maybe.<Integer>empty(), Maybe.just(2), Maybe.just(3))
@@ -2094,7 +2063,6 @@ public class MaybeTest extends RxJavaTest {
         ts.assertResult(2, 3);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayFused() {
         TestSubscriberEx<Integer> ts = new TestSubscriberEx<Integer>().setInitialFusionMode(QueueFuseable.ANY);
@@ -2107,7 +2075,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult(1, 2, 3);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayFusedRace() {
         for (int i = 0; i < TestHelper.RACE_DEFAULT_LOOPS; i++) {
@@ -2143,13 +2110,11 @@ public class MaybeTest extends RxJavaTest {
         }
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayZero() {
         assertSame(Flowable.empty(), Maybe.mergeArray());
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayOne() {
         Maybe.mergeArray(Maybe.just(1)).test().assertResult(1);
@@ -2188,7 +2153,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult(1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeIterable() {
         Maybe.merge(Arrays.asList(Maybe.just(1), Maybe.just(2), Maybe.just(3)))
@@ -2282,7 +2246,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void subscribeToOnSuccess() {
-        final List<Integer> values = new ArrayList<Integer>();
+        final List<Integer> values = new ArrayList<>();
 
         Consumer<Integer> onSuccess = new Consumer<Integer>() {
             @Override
@@ -2302,7 +2266,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void subscribeToOnError() {
-        final List<Throwable> values = new ArrayList<Throwable>();
+        final List<Throwable> values = new ArrayList<>();
 
         Consumer<Throwable> onError = new Consumer<Throwable>() {
             @Override
@@ -2323,7 +2287,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void subscribeToOnComplete() {
-        final List<Integer> values = new ArrayList<Integer>();
+        final List<Integer> values = new ArrayList<>();
 
         Action onComplete = new Action() {
             @Override
@@ -2370,7 +2334,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void doOnEventSuccess() {
-        final List<Object> list = new ArrayList<Object>();
+        final List<Object> list = new ArrayList<>();
 
         assertTrue(Maybe.just(1)
         .doOnEvent(new BiConsumer<Integer, Throwable>() {
@@ -2389,7 +2353,7 @@ public class MaybeTest extends RxJavaTest {
     public void doOnEventError() {
         List<Throwable> errors = TestHelper.trackPluginErrors();
         try {
-            final List<Object> list = new ArrayList<Object>();
+            final List<Object> list = new ArrayList<>();
 
             TestException ex = new TestException();
 
@@ -2413,7 +2377,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void doOnEventComplete() {
-        final List<Object> list = new ArrayList<Object>();
+        final List<Object> list = new ArrayList<>();
 
         assertTrue(Maybe.<Integer>empty()
         .doOnEvent(new BiConsumer<Integer, Throwable>() {
@@ -2477,7 +2441,6 @@ public class MaybeTest extends RxJavaTest {
         .assertFailure(TestException.class);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatArrayDelayError() {
         Maybe.concatArrayDelayError(Maybe.empty(), Maybe.just(1), Maybe.error(new TestException()))
@@ -2493,7 +2456,6 @@ public class MaybeTest extends RxJavaTest {
         assertFalse(Maybe.concatArrayDelayError(Maybe.never()) instanceof MaybeConcatArrayDelayError);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatIterableDelayError() {
         Maybe.concatDelayError(Arrays.asList(Maybe.empty(), Maybe.just(1), Maybe.error(new TestException())))
@@ -2516,7 +2478,6 @@ public class MaybeTest extends RxJavaTest {
         .assertFailure(TestException.class, 1);
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatEagerArray() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -2539,7 +2500,6 @@ public class MaybeTest extends RxJavaTest {
 
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void concatEagerIterable() {
         PublishProcessor<Integer> pp1 = PublishProcessor.create();
@@ -2624,7 +2584,6 @@ public class MaybeTest extends RxJavaTest {
         ;
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeArrayDelayError() {
         Maybe.mergeArrayDelayError(Maybe.empty(), Maybe.just(1), Maybe.error(new TestException()))
@@ -2638,7 +2597,6 @@ public class MaybeTest extends RxJavaTest {
         assertSame(Flowable.empty(), Maybe.mergeArrayDelayError());
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void mergeIterableDelayError() {
         Maybe.mergeDelayError(Arrays.asList(Maybe.empty(), Maybe.just(1), Maybe.error(new TestException())))
@@ -2704,7 +2662,7 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void sequenceEqual() {
-        Maybe.sequenceEqual(Maybe.just(1), Maybe.just(new Integer(1))).test().assertResult(true);
+        Maybe.sequenceEqual(Maybe.just(1_000_000), Maybe.just(Integer.valueOf(1_000_000))).test().assertResult(true);
 
         Maybe.sequenceEqual(Maybe.just(1), Maybe.just(2)).test().assertResult(false);
 
@@ -2900,7 +2858,6 @@ public class MaybeTest extends RxJavaTest {
         .assertResult("[1]");
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     public void zipIterable() {
         Maybe.zip(
@@ -3048,7 +3005,6 @@ public class MaybeTest extends RxJavaTest {
 
     @Test
     public void zipIterableObject() {
-        @SuppressWarnings("unchecked")
         final List<Maybe<Integer>> maybes = Arrays.asList(Maybe.just(1), Maybe.just(4));
         Maybe.zip(maybes, new Function<Object[], Object>() {
             @Override
